--- a/src/views/checkIn/invitationRules.ejs
+++ b/src/views/checkIn/invitationRules.ejs
@@ -269,87 +269,87 @@
                         <i class="fa-light fa-angle-left fa-fade fa-xl center" style="color: #FFF"></i>
                     </div>
                 </div>
-                <div data-v-106b99c8="" class="navbar-title">Invitation Reward Rules</div>
+                <div data-v-106b99c8="" class="navbar-title" data-lang="inviteRule">Invitation Reward Rules</div>
                 <div data-v-106b99c8="" class="navbar-right"></div>
             </div>
             <div data-v-08f58021="" class="container" style="padding: 25px;line-height: 22px;">
-               <div data-v-08f58021="" class="tip">Invite friends and recharge to get additional platform rewards!</div>
-               <div data-v-08f58021="" class="tip">After being claimed, the rewards will be directly distributed to the wallet
+               <div data-v-08f58021="" class="tip" data-lang="iRule1">Invite friends and recharge to get additional platform rewards!</div>
+               <div data-v-08f58021="" class="tip" data-lang="iRule2">After being claimed, the rewards will be directly distributed to the wallet
                   balance within 10 minutes.</div>
             </div>
 
             <div data-v-c1e312a2="" class="dailySignInRules__container-hero">
                 <div data-v-c1e312a2="" class="dailySignInRules__container-hero__wrapper">
                    <div data-v-c1e312a2="" class="dailySignInRules__container-hero__wrapper-titlebox">
-                      <div data-v-c1e312a2="" class="dailySignInRules__container-hero__wrapper-title">Invite account
+                      <div data-v-c1e312a2="" class="dailySignInRules__container-hero__wrapper-title" data-lang="iRule3">Invite account
                       </div>
-                      <div data-v-c1e312a2="" class="dailySignInRules__container-hero__wrapper-title">Deposit amount
+                      <div data-v-c1e312a2="" class="dailySignInRules__container-hero__wrapper-title" data-lang="totalRechargeAmount">Deposit amount
                       </div>
-                      <div data-v-c1e312a2="" class="dailySignInRules__container-hero__wrapper-title">Bonus</div>
+                      <div data-v-c1e312a2="" class="dailySignInRules__container-hero__wrapper-title" data-lang="explainDesc5">Bonus</div>
                    </div>
                    <ul data-v-08f58021="">
                      <li data-v-08f58021="">
-                        <div data-v-08f58021="">10000People</div>
+                        <div data-v-08f58021="">10000<span data-lang="people">People</span></div>
                         <div data-v-08f58021="">₹2,555.00</div>
                         <div data-v-08f58021="">₹999,999.00</div>
                      </li>
                      <li data-v-08f58021="">
-                        <div data-v-08f58021="">5000People</div>
+                        <div data-v-08f58021="">5000<span data-lang="people">People</span></div>
                         <div data-v-08f58021="">₹2,111.00</div>
                         <div data-v-08f58021="">₹299,999.00</div>
                      </li>
                      <li data-v-08f58021="">
-                        <div data-v-08f58021="">2000People</div>
+                        <div data-v-08f58021="">2000<span data-lang="people">People</span></div>
                         <div data-v-08f58021="">₹1,777.00</div>
                         <div data-v-08f58021="">₹122,229.00</div>
                      </li>
                      <li data-v-08f58021="">
-                        <div data-v-08f58021="">1000People</div>
+                        <div data-v-08f58021="">1000<span data-lang="people">People</span></div>
                         <div data-v-08f58021="">₹1,777.00</div>
                         <div data-v-08f58021="">₹64,449.00</div>
                      </li>
                      <li data-v-08f58021="">
-                        <div data-v-08f58021="">500People</div>
+                        <div data-v-08f58021="">500<span data-lang="people">People</span></div>
                         <div data-v-08f58021="">₹1,777.00</div>
                         <div data-v-08f58021="">₹33,339.00</div>
                      </li>
                      <li data-v-08f58021="">
-                        <div data-v-08f58021="">200People</div>
+                        <div data-v-08f58021="">200<span data-lang="people">People</span></div>
                         <div data-v-08f58021="">₹1,555.00</div>
                         <div data-v-08f58021="">₹12,229.00</div>
                      </li>
                      <li data-v-08f58021="">
-                        <div data-v-08f58021="">100People</div>
+                        <div data-v-08f58021="">100<span data-lang="people">People</span></div>
                         <div data-v-08f58021="">₹1,555.00</div>
                         <div data-v-08f58021="">₹6,799.00</div>
                      </li>
                      <li data-v-08f58021="">
-                        <div data-v-08f58021="">75People</div>
+                        <div data-v-08f58021="">75<span data-lang="people">People</span></div>
                         <div data-v-08f58021="">₹1,555.00</div>
                         <div data-v-08f58021="">₹4,799.00</div>
                      </li>
                      <li data-v-08f58021="">
-                        <div data-v-08f58021="">50People</div>
+                        <div data-v-08f58021="">50<span data-lang="people">People</span></div>
                         <div data-v-08f58021="">₹1,111.00</div>
                         <div data-v-08f58021="">₹2,799.00</div>
                      </li>
                      <li data-v-08f58021="">
-                        <div data-v-08f58021="">30People</div>
+                        <div data-v-08f58021="">30<span data-lang="people">People</span></div>
                         <div data-v-08f58021="">₹1,111.00</div>
                         <div data-v-08f58021="">₹1,799.00</div>
                      </li>
                      <li data-v-08f58021="">
-                        <div data-v-08f58021="">10People</div>
+                        <div data-v-08f58021="">10<span data-lang="people">People</span></div>
                         <div data-v-08f58021="">₹1,111.00</div>
                         <div data-v-08f58021="">₹599.00</div>
                      </li>
                      <li data-v-08f58021="">
-                        <div data-v-08f58021="">5People</div>
+                        <div data-v-08f58021="">5<span data-lang="people">People</span></div>
                         <div data-v-08f58021="">₹555.00</div>
                         <div data-v-08f58021="">₹299.00</div>
                      </li>
                      <li data-v-08f58021="">
-                        <div data-v-08f58021="">3People</div>
+                        <div data-v-08f58021="">3<span data-lang="people">People</span></div>
                         <div data-v-08f58021="">₹555.00</div>
                         <div data-v-08f58021="">₹199.00</div>
                      </li>
@@ -360,23 +360,23 @@
                 <svg data-v-b64fa971="" class="svg-icon icon-ruleHead">
                    <use xlink:href="#icon-ruleHead"></use>
                 </svg>
-                <div data-v-b64fa971="" class="head">Rules</div>
+                <div data-v-b64fa971="" class="head" data-lang="titleInvitationRule">Rules</div>
                 
                
                 <div data-v-b64fa971="">
-                  <div data-v-b64fa971="">Only when the number of invited accounts is reached and each account can meet the
+                  <div data-v-b64fa971="" data-lang="iRule4">Only when the number of invited accounts is reached and each account can meet the
                      recharge amount can you receive the bonus.</div>
                </div>
                <div data-v-b64fa971="">
-                  <div data-v-b64fa971="">The invitation account meets the requirements, but the recharge amount of the
+                  <div data-v-b64fa971="" data-lang="iRule5">The invitation account meets the requirements, but the recharge amount of the
                      account does not meet the requirements, and the bonus cannot be claimed.</div>
                </div>
                <div data-v-b64fa971="">
-                  <div data-v-b64fa971="">Please claim the event bonus within the event period. All bonuses will be cleared
+                  <div data-v-b64fa971="" data-lang="iRule6">Please claim the event bonus within the event period. All bonuses will be cleared
                      after the event expires.</div>
                </div>
                <div data-v-b64fa971="">
-                  <div data-v-b64fa971="">Please complete the task within the event period. After the event expires, the
+                  <div data-v-b64fa971="" data-lang="iRule7">Please complete the task within the event period. After the event expires, the
                      invitation record will be cleared.</div>
                </div>
              </div>
@@ -388,7 +388,23 @@
           <script src="https://momentjs.com/downloads/moment.js"></script>
           <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.1/socket.io.js"></script>
         <script>
-          
+            $.ajax({
+                type: "POST",
+                url: "/api/webapi/getlangdata",
+                data: {
+                },
+                dataType: "json",
+                success: function (response) {
+                    load_lang_data(response.data);
+                }
+              });
+        
+              function load_lang_data(data)
+              {
+                $.each(data, function(key,valueObj){
+                  $("[data-lang="+key+"]").text(valueObj);
+                });
+              }
       </script>
 </body>
 
