--- a/src/views/checkIn/vip.ejs
+++ b/src/views/checkIn/vip.ejs
@@ -5433,14 +5433,14 @@
                     <div data-v-92d3d2e1="" class="vip-content-empirical">
                         <div data-v-92d3d2e1="">
                             <p data-v-92d3d2e1="" class="red" id="xp_gain"></p>
-                            <p data-v-92d3d2e1="">My experience</p>
+                            <p data-v-92d3d2e1="" data-lang="myExperience">My experience</p>
                         </div>
                         <div data-v-92d3d2e1="">
                             <p data-v-92d3d2e1="" class="timeTop"><span id="payout_day_display"> 16</span> Days</p>
-                            <p data-v-92d3d2e1="">Payout time</p>
+                            <p data-v-92d3d2e1="" data-lang="settlementTime">Payout time</p>
                         </div>
                     </div>
-                    <div data-v-92d3d2e1="" class="vip-content-tip">VIP level rewards are settled at 2:00 am on the 1st of every month</div>
+                    <div data-v-92d3d2e1="" class="vip-content-tip" data-lang="vipTip18">VIP level rewards are settled at 2:00 am on the 1st of every month</div>
                     <!--vip卡片-->
                     <div data-v-31cfa30d="" data-v-92d3d2e1="" class="vip-content-card">
                         <div data-v-31cfa30d="" class="vip-content-card-item">
@@ -5452,7 +5452,7 @@
                                         <div data-v-31cfa30d="" class="itemInfo-head">
                                             <div data-v-31cfa30d="">
                                                 <img data-v-31cfa30d="" src="/assets/png/1-d951dc6d.png" />
-                                                <h1 data-v-31cfa30d="" class="level1">VIP1</h1>
+                                                <h1 data-v-31cfa30d="" class="level1" data-lang="">VIP1</h1>
                                                <div class="span_open_close"> <img data-v-31cfa30d="" src="/assets/png/ununlocked-b5a4c7d0.png" /><span data-v-31cfa30d="" >Not open yet</span></div>
                                             </div>
                                             <div data-v-31cfa30d="" class="mb30">
@@ -5741,8 +5741,8 @@
                             <div data-v-9bb5e81c="" class="vip-content-weal-con">
                                 <div data-v-9bb5e81c=""><img data-v-9bb5e81c="" src="/assets/png/1-fd9896f4.png" /></div>
                                 <div data-v-9bb5e81c="">
-                                    <h2 data-v-9bb5e81c="">Level up rewards</h2>
-                                    <span data-v-9bb5e81c="">Each account can only receive 1 time</span>
+                                    <h2 data-v-9bb5e81c="" data-lang="wealName1">Level up rewards</h2>
+                                    <span data-v-9bb5e81c="" data-lang="wealDescription1">Each account can only receive 1 time</span>
                                 </div>
                                 <div data-v-9bb5e81c="">
                                     <p data-v-9bb5e81c=""><img data-v-9bb5e81c=""  src="/assets/png/gold-4a60a059.png" /> <span id="vip_level_rewd"> 30</span></p>
@@ -5754,8 +5754,8 @@
                             <div data-v-9bb5e81c="" class="vip-content-weal-con">
                                 <div data-v-9bb5e81c=""><img data-v-9bb5e81c="" src="/assets/png/2-0a41a908.png" /></div>
                                 <div data-v-9bb5e81c="">
-                                    <h2 data-v-9bb5e81c="">Monthly reward</h2>
-                                    <span data-v-9bb5e81c="">Each account can only receive 1 time per month</span>
+                                    <h2 data-v-9bb5e81c="" data-lang="wealName2">Monthly reward</h2>
+                                    <span data-v-9bb5e81c="" data-lang="wealDescription2">Each account can only receive 1 time per month</span>
                                 </div>
                                 <div data-v-9bb5e81c="">
                                     <p data-v-9bb5e81c=""><img data-v-9bb5e81c="" src="/assets/png/gold-4a60a059.png"  /> <span id="vip_month_reward"> 30</span> </p>
@@ -5767,8 +5767,8 @@
                             <div data-v-9bb5e81c="" class="vip-content-weal-con">
                                 <div data-v-9bb5e81c=""><img data-v-9bb5e81c="" src="/assets/png/4-e53b4da2.png" /></div>
                                 <div data-v-9bb5e81c="">
-                                    <h2 data-v-9bb5e81c="">Safe</h2>
-                                    <span data-v-9bb5e81c="">Increase the extra income of the safe</span>
+                                    <h2 data-v-9bb5e81c="" data-lang="security">Safe</h2>
+                                    <span data-v-9bb5e81c="" data-lang="wealDescription4">Increase the extra income of the safe</span>
                                 </div>
                                 <div data-v-9bb5e81c="">
                                     <p data-v-9bb5e81c="" class="max">
@@ -5779,8 +5779,8 @@
                             <div data-v-9bb5e81c="" class="vip-content-weal-con">
                                 <div data-v-9bb5e81c=""><img data-v-9bb5e81c="" src="/assets/png/5-5e6a64b1.png" /></div>
                                 <div data-v-9bb5e81c="">
-                                    <h2 data-v-9bb5e81c="">Rebate rate</h2>
-                                    <span data-v-9bb5e81c="">Increase income of rebate</span>
+                                    <h2 data-v-9bb5e81c="" data-lang="laundryRate">Rebate rate</h2>
+                                    <span data-v-9bb5e81c="" data-lang="wealDescription5">Increase income of rebate</span>
                                 </div>
                                 <div data-v-9bb5e81c="">
                                     <p data-v-9bb5e81c="" class="max">
@@ -5795,7 +5795,7 @@
                         <div data-v-4e842459="" class="slideMy">
                             <div data-v-4e842459="" class="vip-content-myWelfare-head ar-1px-b">
                                 <svg data-v-4e842459="" class="svg-icon icon-crown"><use xlink:href="#icon-crown"></use></svg>
-                                <h1 data-v-4e842459="">My benefits</h1>
+                                <h1 data-v-4e842459="" data-lang="vipDesc1">My benefits</h1>
                             </div>
                             <div data-v-4e842459="" class="vip-content-myWelfare-con"></div>
                         </div>
@@ -5806,9 +5806,9 @@
                         <div data-v-eaa4a307="" class="vip-content-recordVsrule-con">
                             <div data-v-f84b843f="" data-v-eaa4a307="" class="empty__container">
                                 <svg data-v-f84b843f="" class="svg-icon icon-empty"><use xlink:href="#icon-empty"></use></svg>
-                                <p data-v-f84b843f="">No data</p>
+                                <p data-v-f84b843f="" data-lang="noData">No data</p>
                             </div>
-                            <button data-v-eaa4a307="">View All</button>
+                            <button data-v-eaa4a307="" data-lang="viewAll">View All</button>
                         </div>
                     </div>
                 </div>
@@ -6064,6 +6064,13 @@
                 if (vipHistory?.length !== 0) {
                     $(".vip-content-recordVsrule-con").html(vipHistoryHtml);
                 }
+                else
+                {
+                    $(".vip-content-recordVsrule-con").html(`<div data-v-f84b843f="" data-v-eaa4a307="" class="empty__container">
+                                <svg data-v-f84b843f="" class="svg-icon icon-empty"><use xlink:href="#icon-empty"></use></svg>
+                                <p data-v-f84b843f="" data-lang="noData">No data</p>
+                            </div>`);
+                }
 
                 $(".ar-loading-view").fadeOut();
                 isHistoryLoading = false;
@@ -6086,10 +6093,28 @@
         $("#rules_tab_btn").on("click", function () {
             $("#history_tab_btn").removeClass("active");
             $("#rules_tab_btn").addClass("active");
-            $(".vip-content-recordVsrule-con").html(`
-                <div data-v-eaa4a307="" class="con-content"><div data-v-eaa4a307="" class="con-content__title"><h1 data-v-eaa4a307="">VIP privileges</h1><p data-v-eaa4a307="">VIP rule description</p></div><div data-v-eaa4a307="" class="con-content__rules"><div data-v-eaa4a307="" class="con-content__rules-item ruleHead"><svg data-v-eaa4a307="" class="svg-icon icon-ruleHead"><use xlink:href="#icon-ruleHead"></use></svg><div data-v-eaa4a307="" class="con-content__rules-item__title">Upgrade standard</div><div data-v-eaa4a307="" class="con-content__rules-item__titleRight"></div><p data-v-eaa4a307="">The IP member's experience points (valid bet amount) that meet the requirements of the corresponding rank will be promoted to the corresponding VIP level, the member's VIP data statistics period starts from 00:00:00 days VIP system launched.VIP level calculation is refreshed every 10 minutes! The corresponding experience level is calculated according to valid odds 1:1 !</p></div><div data-v-eaa4a307="" class="con-content__rules-item ruleHead"><svg data-v-eaa4a307="" class="svg-icon icon-ruleHead"><use xlink:href="#icon-ruleHead"></use></svg><div data-v-eaa4a307="" class="con-content__rules-item__title">Upgrade order</div><div data-v-eaa4a307="" class="con-content__rules-item__titleRight"></div><p data-v-eaa4a307="">The VIP level that meets the corresponding requirements can be promoted by one level every day, but the VIP level cannot be promoted by leapfrogging.</p></div><div data-v-eaa4a307="" class="con-content__rules-item ruleHead"><svg data-v-eaa4a307="" class="svg-icon icon-ruleHead"><use xlink:href="#icon-ruleHead"></use></svg><div data-v-eaa4a307="" class="con-content__rules-item__title">Level maintenance</div><div data-v-eaa4a307="" class="con-content__rules-item__titleRight"></div><p data-v-eaa4a307="">VIP members need to complete the maintenance requirements of the corresponding level within 30 days after the "VIP level change"; if the promotion is completed during this period, the maintenance requirements will be calculated according to the current level.</p></div><div data-v-eaa4a307="" class="con-content__rules-item ruleHead"><svg data-v-eaa4a307="" class="svg-icon icon-ruleHead"><use xlink:href="#icon-ruleHead"></use></svg><div data-v-eaa4a307="" class="con-content__rules-item__title">Downgrade standard</div><div data-v-eaa4a307="" class="con-content__rules-item__titleRight"></div><p data-v-eaa4a307="">If a VIP member fails to complete the corresponding level maintenance requirements within 30 days, the system will automatically deduct the experience points corresponding to the level. If the experience points are insufficient, the level will be downgraded, and the corresponding discounts will be adjusted to the downgraded level accordingly.</p></div><div data-v-eaa4a307="" class="con-content__rules-item ruleHead"><svg data-v-eaa4a307="" class="svg-icon icon-ruleHead"><use xlink:href="#icon-ruleHead"></use></svg><div data-v-eaa4a307="" class="con-content__rules-item__title">Upgrade Bonus</div><div data-v-eaa4a307="" class="con-content__rules-item__titleRight"></div><p data-v-eaa4a307="">The upgrade benefits can be claimed on the VIP page after the member reaches the VIP membership level, and each VIP member can only get the upgrade reward of each level once.</p></div><div data-v-eaa4a307="" class="con-content__rules-item ruleHead"><svg data-v-eaa4a307="" class="svg-icon icon-ruleHead"><use xlink:href="#icon-ruleHead"></use></svg><div data-v-eaa4a307="" class="con-content__rules-item__title">Monthly reward</div><div data-v-eaa4a307="" class="con-content__rules-item__titleRight"></div><p data-v-eaa4a307="">VIP members can earn the highest level of VIP rewards once a month.Can only be received once a month. Prizes cannot be accumulated. And any unclaimed rewards will be refreshed on the next settlement day. When receiving the highest level of monthly rewards this month Monthly Rewards earned in this month will be deducted e.g. when VIP1 earns 500 and upgrades to VIP2 to receive monthly rewards 500 will be deducted.</p></div><div data-v-eaa4a307="" class="con-content__rules-item ruleHead"><svg data-v-eaa4a307="" class="svg-icon icon-ruleHead"><use xlink:href="#icon-ruleHead"></use></svg><div data-v-eaa4a307="" class="con-content__rules-item__title">Real-time rebate</div><div data-v-eaa4a307="" class="con-content__rules-item__titleRight"></div><p data-v-eaa4a307="">The higher the VIP level, the higher the return rate, all the games are calculated in real time and can be self-rewarded!</p></div><div data-v-eaa4a307="" class="con-content__rules-item ruleHead"><svg data-v-eaa4a307="" class="svg-icon icon-ruleHead"><use xlink:href="#icon-ruleHead"></use></svg><div data-v-eaa4a307="" class="con-content__rules-item__title">Safe</div><div data-v-eaa4a307="" class="con-content__rules-item__titleRight"></div><p data-v-eaa4a307="">VIP members who have reached the corresponding level will get additional benefits on safe deposit based on the member's VIP level.</p></div></div></div>
-            `);
+        $(".vip-content-recordVsrule-con").html(`
+              <div data-v-eaa4a307="" class="con-content"><div data-v-eaa4a307="" class="con-content__title"><h1 data-v-eaa4a307="">VIP privileges</h1><p data-v-eaa4a307="">VIP rule description</p></div><div data-v-eaa4a307="" class="con-content__rules"><div data-v-eaa4a307="" class="con-content__rules-item ruleHead"><svg data-v-eaa4a307="" class="svg-icon icon-ruleHead"><use xlink:href="#icon-ruleHead"></use></svg><div data-v-eaa4a307="" class="con-content__rules-item__title">Upgrade standard</div><div data-v-eaa4a307="" class="con-content__rules-item__titleRight"></div><p data-v-eaa4a307="">The IP member's experience points (valid bet amount) that meet the requirements of the corresponding rank will be promoted to the corresponding VIP level, the member's VIP data statistics period starts from 00:00:00 days VIP system launched.VIP level calculation is refreshed every 10 minutes! The corresponding experience level is calculated according to valid odds 1:1 !</p></div><div data-v-eaa4a307="" class="con-content__rules-item ruleHead"><svg data-v-eaa4a307="" class="svg-icon icon-ruleHead"><use xlink:href="#icon-ruleHead"></use></svg><div data-v-eaa4a307="" class="con-content__rules-item__title">Upgrade order</div><div data-v-eaa4a307="" class="con-content__rules-item__titleRight"></div><p data-v-eaa4a307="">The VIP level that meets the corresponding requirements can be promoted by one level every day, but the VIP level cannot be promoted by leapfrogging.</p></div><div data-v-eaa4a307="" class="con-content__rules-item ruleHead"><svg data-v-eaa4a307="" class="svg-icon icon-ruleHead"><use xlink:href="#icon-ruleHead"></use></svg><div data-v-eaa4a307="" class="con-content__rules-item__title">Level maintenance</div><div data-v-eaa4a307="" class="con-content__rules-item__titleRight"></div><p data-v-eaa4a307="">VIP members need to complete the maintenance requirements of the corresponding level within 30 days after the "VIP level change"; if the promotion is completed during this period, the maintenance requirements will be calculated according to the current level.</p></div><div data-v-eaa4a307="" class="con-content__rules-item ruleHead"><svg data-v-eaa4a307="" class="svg-icon icon-ruleHead"><use xlink:href="#icon-ruleHead"></use></svg><div data-v-eaa4a307="" class="con-content__rules-item__title">Downgrade standard</div><div data-v-eaa4a307="" class="con-content__rules-item__titleRight"></div><p data-v-eaa4a307="">If a VIP member fails to complete the corresponding level maintenance requirements within 30 days, the system will automatically deduct the experience points corresponding to the level. If the experience points are insufficient, the level will be downgraded, and the corresponding discounts will be adjusted to the downgraded level accordingly.</p></div><div data-v-eaa4a307="" class="con-content__rules-item ruleHead"><svg data-v-eaa4a307="" class="svg-icon icon-ruleHead"><use xlink:href="#icon-ruleHead"></use></svg><div data-v-eaa4a307="" class="con-content__rules-item__title">Upgrade Bonus</div><div data-v-eaa4a307="" class="con-content__rules-item__titleRight"></div><p data-v-eaa4a307="">The upgrade benefits can be claimed on the VIP page after the member reaches the VIP membership level, and each VIP member can only get the upgrade reward of each level once.</p></div><div data-v-eaa4a307="" class="con-content__rules-item ruleHead"><svg data-v-eaa4a307="" class="svg-icon icon-ruleHead"><use xlink:href="#icon-ruleHead"></use></svg><div data-v-eaa4a307="" class="con-content__rules-item__title">Monthly reward</div><div data-v-eaa4a307="" class="con-content__rules-item__titleRight"></div><p data-v-eaa4a307="">VIP members can earn the highest level of VIP rewards once a month.Can only be received once a month. Prizes cannot be accumulated. And any unclaimed rewards will be refreshed on the next settlement day. When receiving the highest level of monthly rewards this month Monthly Rewards earned in this month will be deducted e.g. when VIP1 earns 500 and upgrades to VIP2 to receive monthly rewards 500 will be deducted.</p></div><div data-v-eaa4a307="" class="con-content__rules-item ruleHead"><svg data-v-eaa4a307="" class="svg-icon icon-ruleHead"><use xlink:href="#icon-ruleHead"></use></svg><div data-v-eaa4a307="" class="con-content__rules-item__title">Real-time rebate</div><div data-v-eaa4a307="" class="con-content__rules-item__titleRight"></div><p data-v-eaa4a307="">The higher the VIP level, the higher the return rate, all the games are calculated in real time and can be self-rewarded!</p></div><div data-v-eaa4a307="" class="con-content__rules-item ruleHead"><svg data-v-eaa4a307="" class="svg-icon icon-ruleHead"><use xlink:href="#icon-ruleHead"></use></svg><div data-v-eaa4a307="" class="con-content__rules-item__title">Safe</div><div data-v-eaa4a307="" class="con-content__rules-item__titleRight"></div><p data-v-eaa4a307="">VIP members who have reached the corresponding level will get additional benefits on safe deposit based on the member's VIP level.</p></div></div></div>
+        `);
         });
+
+        $.ajax({
+                type: "POST",
+                url: "/api/webapi/getlangdata",
+                data: {
+                },
+                dataType: "json",
+                success: function (response) {
+                    load_lang_data(response.data);
+                }
+              });
+        
+              function load_lang_data(data)
+              {
+                $.each(data, function(key,valueObj){
+                  $("[data-lang="+key+"]").text(valueObj);
+                });
+              }
 </script>
     </body>
 </html>
