--- a/src/views/checkIn/vip.ejs
+++ b/src/views/checkIn/vip.ejs
@@ -5802,7 +5802,7 @@
                     </div>
                     <!--记录规则-->
                     <div data-v-eaa4a307="" data-v-92d3d2e1="" class="vip-content-recordVsrule">
-                        <div data-v-eaa4a307="" class="vip-content-recordVsrule-head"><button data-v-eaa4a307="" class="active"  id="history_tab_btn">History</button><button data-v-eaa4a307="" class=""  id="rules_tab_btn">Rules</button></div>
+                        <div data-v-eaa4a307="" class="vip-content-recordVsrule-head"><button data-v-eaa4a307="" class="active"  id="history_tab_btn" data-lang="record">History</button><button data-v-eaa4a307="" class=""  id="rules_tab_btn" data-lang="titleInvitationRule">Rules</button></div>
                         <div data-v-eaa4a307="" class="vip-content-recordVsrule-con">
                             <div data-v-f84b843f="" data-v-eaa4a307="" class="empty__container">
                                 <svg data-v-f84b843f="" class="svg-icon icon-empty"><use xlink:href="#icon-empty"></use></svg>
@@ -6094,8 +6094,69 @@
             $("#history_tab_btn").removeClass("active");
             $("#rules_tab_btn").addClass("active");
         $(".vip-content-recordVsrule-con").html(`
-              <div data-v-eaa4a307="" class="con-content"><div data-v-eaa4a307="" class="con-content__title"><h1 data-v-eaa4a307="">VIP privileges</h1><p data-v-eaa4a307="">VIP rule description</p></div><div data-v-eaa4a307="" class="con-content__rules"><div data-v-eaa4a307="" class="con-content__rules-item ruleHead"><svg data-v-eaa4a307="" class="svg-icon icon-ruleHead"><use xlink:href="#icon-ruleHead"></use></svg><div data-v-eaa4a307="" class="con-content__rules-item__title">Upgrade standard</div><div data-v-eaa4a307="" class="con-content__rules-item__titleRight"></div><p data-v-eaa4a307="">The IP member's experience points (valid bet amount) that meet the requirements of the corresponding rank will be promoted to the corresponding VIP level, the member's VIP data statistics period starts from 00:00:00 days VIP system launched.VIP level calculation is refreshed every 10 minutes! The corresponding experience level is calculated according to valid odds 1:1 !</p></div><div data-v-eaa4a307="" class="con-content__rules-item ruleHead"><svg data-v-eaa4a307="" class="svg-icon icon-ruleHead"><use xlink:href="#icon-ruleHead"></use></svg><div data-v-eaa4a307="" class="con-content__rules-item__title">Upgrade order</div><div data-v-eaa4a307="" class="con-content__rules-item__titleRight"></div><p data-v-eaa4a307="">The VIP level that meets the corresponding requirements can be promoted by one level every day, but the VIP level cannot be promoted by leapfrogging.</p></div><div data-v-eaa4a307="" class="con-content__rules-item ruleHead"><svg data-v-eaa4a307="" class="svg-icon icon-ruleHead"><use xlink:href="#icon-ruleHead"></use></svg><div data-v-eaa4a307="" class="con-content__rules-item__title">Level maintenance</div><div data-v-eaa4a307="" class="con-content__rules-item__titleRight"></div><p data-v-eaa4a307="">VIP members need to complete the maintenance requirements of the corresponding level within 30 days after the "VIP level change"; if the promotion is completed during this period, the maintenance requirements will be calculated according to the current level.</p></div><div data-v-eaa4a307="" class="con-content__rules-item ruleHead"><svg data-v-eaa4a307="" class="svg-icon icon-ruleHead"><use xlink:href="#icon-ruleHead"></use></svg><div data-v-eaa4a307="" class="con-content__rules-item__title">Downgrade standard</div><div data-v-eaa4a307="" class="con-content__rules-item__titleRight"></div><p data-v-eaa4a307="">If a VIP member fails to complete the corresponding level maintenance requirements within 30 days, the system will automatically deduct the experience points corresponding to the level. If the experience points are insufficient, the level will be downgraded, and the corresponding discounts will be adjusted to the downgraded level accordingly.</p></div><div data-v-eaa4a307="" class="con-content__rules-item ruleHead"><svg data-v-eaa4a307="" class="svg-icon icon-ruleHead"><use xlink:href="#icon-ruleHead"></use></svg><div data-v-eaa4a307="" class="con-content__rules-item__title">Upgrade Bonus</div><div data-v-eaa4a307="" class="con-content__rules-item__titleRight"></div><p data-v-eaa4a307="">The upgrade benefits can be claimed on the VIP page after the member reaches the VIP membership level, and each VIP member can only get the upgrade reward of each level once.</p></div><div data-v-eaa4a307="" class="con-content__rules-item ruleHead"><svg data-v-eaa4a307="" class="svg-icon icon-ruleHead"><use xlink:href="#icon-ruleHead"></use></svg><div data-v-eaa4a307="" class="con-content__rules-item__title">Monthly reward</div><div data-v-eaa4a307="" class="con-content__rules-item__titleRight"></div><p data-v-eaa4a307="">VIP members can earn the highest level of VIP rewards once a month.Can only be received once a month. Prizes cannot be accumulated. And any unclaimed rewards will be refreshed on the next settlement day. When receiving the highest level of monthly rewards this month Monthly Rewards earned in this month will be deducted e.g. when VIP1 earns 500 and upgrades to VIP2 to receive monthly rewards 500 will be deducted.</p></div><div data-v-eaa4a307="" class="con-content__rules-item ruleHead"><svg data-v-eaa4a307="" class="svg-icon icon-ruleHead"><use xlink:href="#icon-ruleHead"></use></svg><div data-v-eaa4a307="" class="con-content__rules-item__title">Real-time rebate</div><div data-v-eaa4a307="" class="con-content__rules-item__titleRight"></div><p data-v-eaa4a307="">The higher the VIP level, the higher the return rate, all the games are calculated in real time and can be self-rewarded!</p></div><div data-v-eaa4a307="" class="con-content__rules-item ruleHead"><svg data-v-eaa4a307="" class="svg-icon icon-ruleHead"><use xlink:href="#icon-ruleHead"></use></svg><div data-v-eaa4a307="" class="con-content__rules-item__title">Safe</div><div data-v-eaa4a307="" class="con-content__rules-item__titleRight"></div><p data-v-eaa4a307="">VIP members who have reached the corresponding level will get additional benefits on safe deposit based on the member's VIP level.</p></div></div></div>
+              <div data-v-eaa4a307="" class="con-content"><div data-v-eaa4a307="" class="con-content__title">
+                <h1 data-v-eaa4a307="" data-lang="vipPrivilege">VIP privileges</h1><p data-v-eaa4a307="" data-lang="vipRule">VIP rule description</p></div>
+                <div data-v-eaa4a307="" class="con-content__rules"><div data-v-eaa4a307="" class="con-content__rules-item ruleHead">
+                    <svg data-v-eaa4a307="" class="svg-icon icon-ruleHead"><use xlink:href="#icon-ruleHead"></use></svg>
+                    <div data-v-eaa4a307="" class="con-content__rules-item__title" data-lang="promotionCriteria">Upgrade standard</div>
+                    <div data-v-eaa4a307="" class="con-content__rules-item__titleRight"></div>
+                    <p data-v-eaa4a307="" data-lang="rVsTip1">The IP member's experience points (valid bet amount) that meet the requirements
+                         of the corresponding rank will be promoted to the corresponding VIP level, the member's VIP 
+                         data statistics period starts from 00:00:00 days VIP system launched.VIP level calculation is 
+                         refreshed every 10 minutes! The corresponding experience level is calculated according to valid
+                          odds 1:1 !</p>
+                </div><div data-v-eaa4a307="" class="con-content__rules-item ruleHead"><svg data-v-eaa4a307="" class="svg-icon icon-ruleHead"><use xlink:href="#icon-ruleHead"></use></svg>
+                    <div data-v-eaa4a307="" class="con-content__rules-item__title"  data-lang="promotionOrder">Upgrade order</div>
+                    <div data-v-eaa4a307="" class="con-content__rules-item__titleRight"></div>
+                    <p data-v-eaa4a307="" data-lang="rVsTip2">The VIP level that meets the corresponding requirements can be promoted by one level
+                    every day, but the VIP level cannot be promoted by leapfrogging.</p></div>
+                    <div data-v-eaa4a307="" class="con-content__rules-item ruleHead"><svg data-v-eaa4a307="" class="svg-icon icon-ruleHead"><use xlink:href="#icon-ruleHead"></use></svg>
+                    <div data-v-eaa4a307="" class="con-content__rules-item__title" data-lang="vipcondition">Level maintenance</div>
+                    <div data-v-eaa4a307="" class="con-content__rules-item__titleRight"></div>
+                    <p data-v-eaa4a307="" data-lang="rVsTip3">VIP members need to complete the maintenance requirements of the corresponding 
+                    level within 30 days after the "VIP level change"; if the promotion is completed during this period,
+                    the maintenance requirements will be calculated according to the current level.</p></div>
+                    <div data-v-eaa4a307="" class="con-content__rules-item ruleHead"><svg data-v-eaa4a307="" class="svg-icon icon-ruleHead"><use xlink:href="#icon-ruleHead"></use></svg>
+                    <div data-v-eaa4a307="" class="con-content__rules-item__title"  data-lang="downgradeStandard">Downgrade standard</div>
+                    <div data-v-eaa4a307="" class="con-content__rules-item__titleRight"></div>
+                    <p data-v-eaa4a307="" data-lang="rVsTip4">If a VIP member fails to complete the corresponding level maintenance requirements within 30 days, the system will automatically 
+                    deduct the experience points corresponding to the level. If the experience points are insufficient, 
+                    the level will be downgraded, and the corresponding discounts will be adjusted to the downgraded level accordingly.
+                </p></div><div data-v-eaa4a307="" class="con-content__rules-item ruleHead"><svg data-v-eaa4a307="" class="svg-icon icon-ruleHead"><use xlink:href="#icon-ruleHead"></use></svg>
+                <div data-v-eaa4a307="" class="con-content__rules-item__title" data-lang="upgradeReward">Upgrade Bonus</div>
+                <div data-v-eaa4a307="" class="con-content__rules-item__titleRight"></div>
+                <p data-v-eaa4a307="" data-lang="rVsTip5">The upgrade benefits can be claimed on the VIP page after the member reaches the VIP 
+                        membership level, and each VIP member can only get the upgrade reward of each level once.</p></div>
+                <div data-v-eaa4a307="" class="con-content__rules-item ruleHead">
+                <svg data-v-eaa4a307="" class="svg-icon icon-ruleHead"><use xlink:href="#icon-ruleHead"></use></svg>
+                <div data-v-eaa4a307="" class="con-content__rules-item__title" data-lang="wealName2">Monthly reward</div><div data-v-eaa4a307="" class="con-content__rules-item__titleRight"></div>
+                <p data-v-eaa4a307=""  data-lang="rVsTip6">
+                VIP members can earn the highest level of VIP rewards once a month.Can only be received once a month. 
+                Prizes cannot be accumulated. And any unclaimed rewards will be refreshed on the next settlement day. 
+                When receiving the highest level of monthly rewards this month Monthly Rewards earned in this month will 
+                be deducted e.g. when VIP1 earns 500 and upgrades to VIP2 to receive monthly rewards 500 will be deducted.
+            </p></div><div data-v-eaa4a307="" class="con-content__rules-item ruleHead">
+                <svg data-v-eaa4a307="" class="svg-icon icon-ruleHead"><use xlink:href="#icon-ruleHead"></use></svg>
+                <div data-v-eaa4a307="" class="con-content__rules-item__title" data-lang="wealName3">Real-time rebate</div>
+                <div data-v-eaa4a307="" class="con-content__rules-item__titleRight"></div>
+                <p data-v-eaa4a307="" data-lang="rVsTip7">The higher the VIP level, the higher the return rate, all the games are calculated in real time and can be self-rewarded!</p>
+            </div><div data-v-eaa4a307="" class="con-content__rules-item ruleHead">
+                <svg data-v-eaa4a307="" class="svg-icon icon-ruleHead"><use xlink:href="#icon-ruleHead"></use></svg>
+                <div data-v-eaa4a307="" class="con-content__rules-item__title" data-lang="security">Safe</div>
+                <div data-v-eaa4a307="" class="con-content__rules-item__titleRight"></div><p data-v-eaa4a307="" data-lang="rVsTip8">
+                    VIP members who have reached the corresponding level will get additional benefits on safe deposit based on the member's VIP level.</p>
+                </div></div></div>
         `);
+        $.ajax({
+            type: "POST",
+            url: "/api/webapi/getlangdata",
+            data: {
+            },
+            dataType: "json",
+            success: function (response) {
+                load_lang_data(response.data);
+            }
+          });
         });
 
         $.ajax({
